# fasta-stats

./: Cargo.toml  LICENSE  README.md
src/: main.rs  stats.rs
