[package]
name = "fasta-stats"
version = "0.2.0"
edition = "2021"
authors = ["Noah Daniels <noah_daniels@uri.edu>"]
description = "Simple descriptive statistics on FASTA (biological sequence) data"
license = "MIT"
readme = "README.md"

[dependencies]
bio = "2"
statistical = "1.0.0"
num-format = "0.4"
rayon = "1.1"
